--- a/app/src/main/res/layout/item_data.xml
+++ b/app/src/main/res/layout/item_data.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp"
-        android:background="#9fdbf9">
+        android:background="#f9caf8">
 
     <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tv_item_data"
