--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,11 +5,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".activity.LinearActivity">
+        >
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_base"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:padding="15dp"
+            android:clipToPadding="false"/>
 
 </LinearLayout>
