--- a/app/src/main/res/layout/item_hor_footer.xml
+++ b/app/src/main/res/layout/item_hor_footer.xml
@@ -3,7 +3,7 @@
              android:layout_width="100dp"
              android:layout_height="match_parent"
              android:background="#c3fc83">
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
