--- a/app/src/main/res/layout/item_section_header.xml
+++ b/app/src/main/res/layout/item_section_header.xml
@@ -5,7 +5,7 @@
              android:padding="15dp"
              android:background="#f4f4f4">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
